[MI-2700]: Review fixes done 1. Improved code readability

--- a/webapp/src/components/default_avatar/defaultAvatar.scss
+++ b/webapp/src/components/default_avatar/defaultAvatar.scss
@@ -1,6 +1,10 @@
+:root {
+    --avatar-bg-color: #708090;
+}
+
 .jira-issue-tooltip{
     .default-avatar {
-        background-color: #708090;
+        background-color: var(--avatar-bg-color);
         border-radius: 50%;
         margin-right: 5px;
         display: flex;
